# classdock

./: .gitignore  CLAUDE.md  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/: LABELS_QUICK_REFERENCE.md  README.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-feature-request.md  02-bug-report.md  03-hotfix.md  04-documentation.md  05-maintenance.md  06-release.md  config.yml
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  chore.md  docs.md  feature.md  hotfix.md  release.md
.github/scripts/: performance_utils.sh  repository_health_check.sh  run_comprehensive_tests.sh  run_integration_tests.sh  security_utils.sh  test_cli_commands.sh  test_error_recovery.sh  workflow_status_aggregator.sh
.github/workflows/: auto-release.yml  ci.yml  integration.yml  performance.yml  publish.yml  release.yml
classdock/: __init__.py  __main__.py  _version.py  bash_wrapper.py  cli.py  cli_legacy.py  config.py  utils.py
classdock/assignments/: __init__.py  orchestrator.py  push_manager.py  setup.py  student_helper.py
classdock/automation/: cron_manager.py  scheduler.py
classdock/config/: __init__.py  global_config.py  loader.py  validator.py
classdock/roster/: __init__.py  importer.py  manager.py  models.py  sync.py
classdock/secrets/: github_secrets.py
classdock/services/: assignment_service.py  repos_service.py  roster_service.py
classdock/utils/: __init__.py  database.py  file_operations.py  github_api_client.py  github_classroom_api.py  github_exceptions.py  input_handlers.py  logger.py  paths.py  token_manager.py  ui_components.py
docs/: ASSIGNMENT-ORCHESTRATOR.md  AUTOMATION-SUITE.md  BASH_TO_PYTHON_TRANSITION_PLAN.md  BRANCHING_STRATEGY.md  CENTRALIZED_TOKEN_MIGRATION.md  CHANGELOG.md  CHANGELOG_v3.0.0-alpha.1.md  CICD_WORKFLOW.md  CLASSROOM-URL-INTEGRATION.md  CLI_ARCHITECTURE.md  CONTRIBUTING.md  CRON-AUTOMATION.md  ERROR_HANDLING.md  GITHUB_CLASSROOM_API_INTEGRATION.md  LABELS.md  MIGRATION.md  PYPI_PUBLICATION.md  QA_TESTING_GUIDE.md  README.md  ROSTER_MIGRATION.md  ROSTER_QUICK_TEST.md  ROSTER_SYNC.md  ROSTER_TESTING_GUIDE.md  SECRETS-MANAGEMENT.md  TAG_NAMING_CONSISTENCY.md  TESTING.md  TEST_COVERAGE_CENTRALIZED_TOKEN_MIGRATION.md  TEST_IMPLEMENTATION_SUMMARY.md  TIER1_TEST_FIXES.md  VERSION_MANAGEMENT.md
docs-site/: index.md
docs-site/about/: changelog.md  license.md
docs-site/cli/: assignments.md  automation.md  overview.md  repositories.md  secrets.md
docs-site/development/: architecture.md  contributing.md  testing.md  versioning.md
docs-site/getting-started/: configuration.md  installation.md  quick-start.md
docs-site/workflows/: assignment-orchestrator.md  automation-suite.md  classroom-url-integration.md  cron-automation.md  secrets-management.md
docs/legacy/: ASSIGNMENT-ORCHESTRATOR.md  CLI_RENAME_SUMMARY.md  (+11 more)
tests/: __init__.py  conftest.py  test_assignment_service.py  test_assignment_service_token_precheck.py  test_assignment_setup_cli.py  test_assignments.py  test_automation.py  test_cli.py  test_cli_secrets_force.py  test_config_cli.py  test_config_generator.py  test_config_loader.py  test_config_system.py  test_config_validator.py  test_cron_manager.py  test_cron_sync.py  test_cycle_collaborator.py  test_database.py  test_github_api_client.py  test_github_exceptions.py  test_github_secrets_force_update.py  test_push_manager.py  test_repos_fetch.py  test_roster_importer.py  test_roster_manager.py  test_roster_models.py  test_roster_sync.py  test_secrets.py  test_secrets_centralized_tokens.py  test_secrets_config_parsing.py  test_services_automation.py  test_services_repos.py  test_services_secrets.py  test_setup_wizard.py  test_student_helper.py  test_ui_components_centralized_token.py  test_utils.py
(+8 files in other folders)
