[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "classdock"
version = "0.1.1"
description = "Modern Python CLI for automating GitHub Classroom assignment management"
authors = [
    {name = "Hugo Valle", email = "hugovalle1@weber.edu"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["github", "classroom", "education", "automation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Systems Administration",
    "Environment :: Console",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0,<8.2.0",
    "typer>=0.12.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "PyGithub>=1.59.0",
    "cryptography>=41.0.0",
    "PyNaCl>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/hugo-valle/classdock"
Repository = "https://github.com/hugo-valle/classdock"
Documentation = "https://github.com/hugo-valle/classdock#readme"
"Bug Reports" = "https://github.com/hugo-valle/classdock/issues"
"Feature Requests" = "https://github.com/hugo-valle/classdock/issues"

[project.scripts]
classdock = "classdock.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "pytest-mock>=3.11.0",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.31.0",
]

[tool.poetry]
packages = [{include = "classdock"}]
exclude = ["tests"]
include = [
    "classdock/scripts_legacy/*.sh",
    "classdock/utils/*.sh",
    "classdock/docs/*.md",
    "classdock/docs/*.yml",
    "*.conf",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.3.0"
pytest-mock = "^3.11.0"
types-PyYAML = "^6.0.12"
types-requests = "^2.31.0"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["classdock"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["classdock"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
